--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-test-renderer": "^16.4.0",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.1.1",
     "styled-components": "^3.3.2"
   },
   "scripts": {
