--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
   "files.associations": {
     "*.js": "javascriptreact"
   },
-  "editor.formatOnSave": true,
-  "jest.pathToJest": "../node_modules/jest"
+  "editor.formatOnSave": true
 }
